methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime56.PatternPicture'
override def run() {
             ^